// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MD3 primitives in bento MD3Chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Dairy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#fbbf24",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "minWidth": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fbbf24",
            "fontSize": 14,
            "fontWeight": "500",
          }
        }
      >
        Dairy
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in bento MD3FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Scan"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fbbf24",
          "borderRadius": 18,
          "height": 56,
          "justifyContent": "center",
          "minHeight": 56,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": {
            "height": 0,
            "width": NaN,
          },
          "shadowOpacity": 1,
          "shadowRadius": 0,
          "width": 56,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fafafa",
            "fontSize": 20,
          }
        }
      >
        ⊟
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in bento MD3ListRow 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Notifications. On"
      accessibilityRole="summary"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "minHeight": 56,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0a0a0a",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#71717a",
              "fontSize": 12,
            }
          }
        >
          On
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in bento MD3TextField 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#71717a",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Email
      </Text>
      <TextInput
        accessibilityLabel="Email"
        onChangeText={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e4e4e7",
            "borderRadius": 8,
            "borderWidth": 1,
            "color": "#0a0a0a",
            "fontSize": 16,
            "minHeight": 48,
            "paddingHorizontal": 12,
          }
        }
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in clay MD3Chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Dairy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#fbbf24",
          "borderRadius": 10,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "minWidth": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fbbf24",
            "fontSize": 15,
            "fontWeight": "700",
          }
        }
      >
        Dairy
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in clay MD3FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Scan"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fbbf24",
          "borderRadius": 22,
          "height": 56,
          "justifyContent": "center",
          "minHeight": 56,
          "shadowColor": "rgba(58,42,32,0.10)",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 12,
          "width": 56,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff7f0",
            "fontSize": 20,
          }
        }
      >
        ⊟
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in clay MD3ListRow 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Notifications. On"
      accessibilityRole="summary"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "minHeight": 56,
          "paddingHorizontal": 18,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#5b3a1f",
              "fontSize": 17,
              "lineHeight": 26,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#a47148",
              "fontSize": 13,
            }
          }
        >
          On
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in clay MD3TextField 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#a47148",
            "fontSize": 13,
            "marginBottom": 4,
          }
        }
      >
        Email
      </Text>
      <TextInput
        accessibilityLabel="Email"
        onChangeText={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#fde0c2",
            "borderRadius": 10,
            "borderWidth": 1,
            "color": "#5b3a1f",
            "fontSize": 17,
            "minHeight": 48,
            "paddingHorizontal": 12,
          }
        }
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3Chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Dairy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.08)",
          "borderColor": "#a5f3fc",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "minWidth": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#a5f3fc",
            "fontSize": 14,
            "fontWeight": "500",
          }
        }
      >
        Dairy
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Scan"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#a5f3fc",
          "borderRadius": 20,
          "height": 56,
          "justifyContent": "center",
          "minHeight": 56,
          "shadowColor": "rgba(0,0,0,0.35)",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
          "width": 56,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0b0a17",
            "fontSize": 22,
          }
        }
      >
        ⊟
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3ListRow 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Notifications. On"
      accessibilityRole="summary"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.06)",
          "flexDirection": "row",
          "minHeight": 56,
          "paddingHorizontal": 18,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fafafa",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "rgba(250,250,250,0.7)",
              "fontSize": 12,
            }
          }
        >
          On
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in expyrico MD3TextField 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(250,250,250,0.7)",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Email
      </Text>
      <TextInput
        accessibilityLabel="Email"
        onChangeText={[Function]}
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.06)",
            "borderColor": "rgba(255,255,255,0.12)",
            "borderRadius": 8,
            "borderWidth": 1,
            "color": "#fafafa",
            "fontSize": 16,
            "minHeight": 48,
            "paddingHorizontal": 12,
          }
        }
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in material MD3Chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Dairy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#7c4dff",
          "borderRadius": 8,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
          "minWidth": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#7c4dff",
            "fontSize": 14,
            "fontWeight": "500",
          }
        }
      >
        Dairy
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in material MD3FAB 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Scan"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#7c4dff",
          "borderRadius": 24,
          "height": 56,
          "justifyContent": "center",
          "minHeight": 56,
          "shadowColor": "rgba(0,0,0,0.30),",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 3,
          "width": 56,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 22,
          }
        }
      >
        ⊟
      </Text>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in material MD3ListRow 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Notifications. On"
      accessibilityRole="summary"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "minHeight": 56,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1d1b20",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#65558f",
              "fontSize": 12,
            }
          }
        >
          On
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MD3 primitives in material MD3TextField 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#65558f",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Email
      </Text>
      <TextInput
        accessibilityLabel="Email"
        onChangeText={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e0e0e0",
            "borderRadius": 8,
            "borderWidth": 1,
            "color": "#1d1b20",
            "fontSize": 16,
            "minHeight": 48,
            "paddingHorizontal": 12,
          }
        }
        value=""
      />
    </View>
  </View>
</View>
`;
